# ebook2kavita

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  ebook2kavita.py  jln2kavita.py  pyproject.toml
.github/workflows/: pylint.yml
