[project]
name = "ebook2kavita"
version = "0.2.0"
authors = [{ name = "getBoolean" }]
description = "Converts an eBook folder structure to a Kavita folder structure, adding required metadata and repairing malformed EPUB files."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm==4.66.2",
]
keywords = ["kavita", "light novel", "ebook", "converter"]

[project.urls]
Homepage = "https://github.com/getBoolean/ebook2kavita"
Issues = "https://github.com/getBoolean/ebook2kavita/issues"
